--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,8 +7,11 @@ djangorestframework==3.15.2
 dlib==19.24.6
 face-recognition==1.3.0
 face_recognition_models==0.3.0
+joblib==1.4.2
 numpy==2.2.3
 opencv-python==4.11.0.86
 pillow==11.1.0
+scipy==1.15.2
 setuptools==75.8.0
 sqlparse==0.5.3
+threadpoolctl==3.5.0
